# mental-diary

./: README.md
Introduction to Software Engineering/: .gitignore
Introduction to Software Engineering/mental-diary-app/: .dockerignore  docker-compose.yml  package-lock.json  package.json
Introduction to Software Engineering/mental-diary-app/apps/api/: Dockerfile  jest.config.cjs  tsconfig.json
Introduction to Software Engineering/mental-diary-app/apps/web/: Dockerfile  tsconfig.json  vite.config.ts
Introduction to Software Engineering/phase1/: Введение в программную инженерию(фаза1).docx  задание.txt
Introduction to Software Engineering/phase2/: Введение в программную инженерию(фаза2).md
mental-diary-app/: .env.example  AGENTS.md  ML_HANDOFF.md  PHASE_ALIGNMENT.md  README.md  docker-compose.yml  package-lock.json  tsconfig.base.json
mental-diary-app/apps/api/: Dockerfile  package.json
mental-diary-app/apps/web/: Dockerfile  index.html  nginx.conf  package.json  server.mjs
mental-diary-app/services/ml/: Dockerfile  pyproject.toml  requirements.txt
mental-diary-app/services/ml/app/: main.py  model.py  schemas.py  text_features.py
mental-diary-app/services/ml/data/: training_samples.jsonl
mental-diary-app/services/ml/notebooks/: colab_train_model.ipynb
mental-diary-app/services/ml/scripts/: evaluate.py  train.py
phase1/: plan1.txt  Введение в программную инженерию(фаза1).txt  задание.txt
phase2/: plan2.txt  Введение в программную инженерию(фаза2).docx  задание.txt
phase2/diagrams/drawio/: README.md
phase3/: plan3.txt  задание.txt
(+49 files in other folders)
